# TestGUI

./: .gitignore  CMakeLists.txt
includes/: ability.hpp  astat.hpp  character.hpp  characterbuilderform.hpp  charactereditdialog.hpp  characterinfowidget.hpp  characterlistitem.hpp  characterlistwidget.hpp  charactersheetwidget.hpp  lists.hpp  mainwindow.hpp  player.hpp  savingthrow.hpp  skill.hpp
srcs/: ability.cpp  astat.cpp  character.cpp  characterbuilderform.cpp  charactereditdialog.cpp  characterinfowidget.cpp  characterlistitem.cpp  characterlistwidget.cpp  charactersheetwidget.cpp  main.cpp  mainwindow.cpp  player.cpp  savingthrow.cpp  skill.cpp
